# TechPulse

./: .gitignore  AUTH_INTEGRATION_GUIDE.md  DEPLOYMENT_GUIDE.md  LANGUAGE_AUTO_DETECTION_GUIDE.md  OPTIMIZATION_GUIDE.md  QUICKSTART.md  README.en.md  README.ja.md  README.md  RELEASE.md  SETUP_GUIDE.md  TRANSLATION_GENERATION_PLAN.md  VERSION_MANAGEMENT.md  dev.sh  generate_translations.py  mock-api.js  package-lock.json  start.sh  stop.sh  translations_generated.txt  update-version.sh  version-config.json  version-manager.js  version.json  version.sh
backend/: .env.example  .env.template  alembic.ini  pyproject.toml  pytest.ini  requirements-test.txt  run.py  scheduler_daemon.py  test_api.py
backend/alembic/: env.py
backend/alembic/versions/: 872586777ad8_add_zenn_source_type.py  8b08b1d96d72_initial_migration.py
backend/app/: main.py
backend/app/api/: ai.py  ai_config.py  auth.py  auth_enhanced.py  behavior.py  cards.py  chat.py  favorites.py  health.py  notion.py  (+13 more)
backend/scripts/: add_content_column.py  add_datasource_filters.py  add_quality_score.py  add_short_summary.py  add_user_preferences.py  create_auth_logs_table.py  create_fts5_search.py  create_health_table.py  create_p1_tables.py  create_personalization_tables.py  create_settings_tables.py  create_user_favorites_table.py  enrich_metadata.py  generate_ai_summaries.py  init_data_sources.py  migrate_auth_enhancements.py  rescore_all_cards.py  run_tests.sh  test_new_features.py  update_zenn_content.py  update_zenn_summaries.py
backend/tests/: README.md  __init__.py  conftest.py  test_auth_enhanced.py
(+230 files in other folders)
