[tool.poetry]
name = "techpulse-backend"
version = "0.1.0"
description = "TechPulse Backend API - Tech Intelligence Dashboard"
authors = ["TechPulse Team"]
readme = "../README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.9.2,<3.13"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
requests = "^2.31.0"
feedparser = "^6.0.10"
notion-client = "^2.2.1"
openai = "^1.3.7"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-dotenv = "^1.0.0"
httpx = "^0.25.2"
schedule = "^1.2.0"
beautifulsoup4 = "^4.12.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
authlib = "^1.6.5"
itsdangerous = "^2.2.0"
pyotp = "^2.9.0"
qrcode = {extras = ["pil"], version = "^8.2"}
aiosmtplib = "^4.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"